# sociality

./: README.md  docker-compose.yml
backend/: Dockerfile  Pipfile  pyproject.toml  requirements.txt
backend/backend/: settings.py  urls.py
backend/product/: __init__.py  admin.py  models.py  serializers.py  urls.py  views.py
backend/product/management/commands/: wait_for_db.py
backend/product/migrations/: 0001_initial.py  0002_alter_product_price.py
backend/product/utils/: __init__.py  request.py  scraping.py
frontend/: .editorconfig  Dockerfile  craco.config.js  package.json
frontend/src/: App.js
frontend/src/comonents/header/: header.components.jsx
frontend/src/comonents/product-list/: product-list.component.jsx
frontend/src/comonents/scrape-input/: scrape-input.component.jsx
frontend/src/pages/home/: home.component.jsx
frontend/src/pages/product/: product.page.jsx
frontend/src/pages/products/: products.component.jsx  products.page.jsx
