[tool.poetry]
name = "sociality_backend"
version = "0.1.0"
description = ""
authors = ["umtdemr <umitde692@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Django = "=3.2"
djangorestframework = "^3.12.4"
django-cors-headers = "^3.8.0"

[tool.poetry.dev-dependencies]
black = "^21.7b0"
flake8 = "^3.9.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
